Administracion de Entidades Financieras - Estilos

--- a/css/style.css
+++ b/css/style.css
@@ -855,7 +855,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#dbdbdb', end
 }
 
 .bank_title a {
-	color: #effcf9;
+	color: #e3ff9e;
 }
 
 .bank .bank_data_title {
